--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Spencer's homepage!
+description: A collection of Spencer Ofwiti's portfolio projects.
